[project]
name = "langgraph-agentserver-demo"
version = "0.1.0"
description = "A basic LangGraph Agent Server app plus a Gradio client that consumes it via the SDK."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph-cli[inmem]>=0.4.24",
    "langgraph-sdk>=0.2.0",
    "gradio>=5.0,<6.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# src layout: the importable package `agent` lives under src/.
[tool.setuptools]
package-dir = { "" = "src" }
packages = ["agent"]
